Ajout de javadocs